# trustless-medical-ai

./: .gitignore  Cargo.toml  DEMO.md  README.md  SETUP.md  WINDOWS_SETUP.md  deploy.sh  dfx.json  fix-cargo.sh  test-system.bat  test-system.sh  update-deps.sh
src/medical_ai_backend/: Cargo.toml  medical_ai_backend.did
src/medical_ai_backend/src/: lib.rs
src/medical_ai_frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/medical_ai_frontend/src/: App.tsx  index.css
src/medical_ai_frontend/src/components/: AuditTrail.tsx  ComplianceReport.tsx  ComplianceReportComponent.tsx  DiagnosisResult.tsx  ImageUpload.tsx
src/medical_ai_frontend/src/hooks/: useICPAgent.ts
src/medical_ai_frontend/src/utils/: medicalUtils.ts
