[package]
name = "medical_ai_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
ic-stable-structures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
image = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }

[package.metadata.dfx]
type = "rust"
